# lite-thinking-backend

django_backend/: .gitignore  README.md  build.sh  crear_apps_restantes.sh  pyproject.toml  requirements.txt
django_backend/apps/autenticacion/: admin.py  apps.py  permissions.py  serializers.py  urls.py  views.py
django_backend/apps/autenticacion/management/commands/: activar_usuarios.py
django_backend/apps/empresas/: admin.py  apps.py  serializers.py  urls.py  views.py
django_backend/apps/ia/: __init__.py  admin.py  apps.py  serializers.py  urls.py  views.py
django_backend/apps/inventario/: admin.py  reports.py  serializers.py  urls.py  views.py
django_backend/apps/productos/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
django_backend/config/: asgi.py  settings.py  urls.py  wsgi.py
django_backend/templates/admin/: enviar_email_form.html  inventario_movimiento.html
lite_thinking_domain/: README.md  pyproject.toml
lite_thinking_domain/src/lite_thinking_domain/: __init__.py  apps.py  exceptions.py  validators.py
lite_thinking_domain/src/lite_thinking_domain/migrations/: 0001_initial.py
lite_thinking_domain/src/lite_thinking_domain/models/: __init__.py  conversacion.py  empresa.py  inventario.py  producto.py  usuario.py
